[gd_scene load_steps=2 format=3 uid="uid://crdtp8g85vgol"]

[ext_resource type="Script" path="res://addons/voxel-terrain/terrain-control.gd" id="1_p5ifm"]

[node name="TerrainControl" type="TerrainControl"]
custom_minimum_size = Vector2(0, 150)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_p5ifm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlowContainer" type="FlowContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/FlowContainer"]
layout_mode = 2
text = "Tool Size:"

[node name="SizeBox" type="SpinBox" parent="PanelContainer/FlowContainer"]
layout_mode = 2
min_value = 1.0
max_value = 8192.0
value = 4.0

[node name="Label2" type="Label" parent="PanelContainer/FlowContainer"]
layout_mode = 2
text = "Strength:"

[node name="StrengthSlider" type="HSlider" parent="PanelContainer/FlowContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = -1.0
max_value = 1.0
step = 0.1
tick_count = 3
ticks_on_borders = true

[connection signal="value_changed" from="PanelContainer/FlowContainer/SizeBox" to="." method="set_size"]
[connection signal="value_changed" from="PanelContainer/FlowContainer/StrengthSlider" to="." method="set_strength"]
